--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ button:hover{
 
 <!-- Background Music (Auto Play, No Controls) -->
 <audio autoplay loop>
-    <source src="love.mp3" type="audio/mpeg">
+    <source src="Love.mp3" type="audio/mpeg">
 </audio>
 
 <div class="container">
